[project]
name = "griffe-kirin"
version = "0.1.0"
description = "Griffe plugin for Kirin"
readme = "README.md"
authors = [
    { name = "Roger-luo", email = "rluo@quera.com" }
]
requires-python = ">=3.10"
dependencies = [
    "griffe>=1.5.6",
    "typing-extensions>=4.12.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/griffe_kirin"]

[tool.isort]
profile = "black"
combine_as_imports = true
multi_line_output = 3
length_sort = true
src_paths = ["src/griffe_kirin"]

[tool.black]
line-length = 88

[tool.ruff]
target-version = "py312"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[dependency-groups]
dev = [
    "rust-just>=1.39.0",
]
